--- a/lexmark.html
+++ b/lexmark.html
@@ -238,6 +238,13 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 					<h3>There was ample opportunity to improve the platform</h3>
 				</div>
 			</div>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%">
+
+						</div>
+					</div>
+
 		</div>
 	</section>
 
@@ -245,7 +252,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="contentblock">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<img src="images/newcomparison3.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
+					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
@@ -256,163 +263,120 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 				</div>
 		</div>
+
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+				<img src="images/lexmarkform.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+
+												<p> <span style= "font-weight:700;"><br><br>1. Unclear Writing</span><br>The form titles were confusing. Employees weren't sure that they were submitting the correct request form.<br>
+											</p>
+													<p><span style= "font-weight:700;">2. Poor Information Architecture</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p>
+														<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
+
+			</div>
+	</div>
 </div>
+	</section>
+
+
+
+
+
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Baseline usability test</h4>
+					<h3>People were failing 47% of the time</h3>
+					<p>Employees were failing almost once out of every two attempts to find the right form. The usability tests helped me pinpoint the exact steps in the user flow where users were making errors.</p></div></div>
+					<div class="row">
+						<div class="col-lg-3 col-md-3 col-sm-3">
+							<img src="images/lexmarkbaselinesuccessnumber.png" class="img-responsive" style="max-width:100%">
+				</div>
+						<div class="col-lg-9 col-md-9 col-sm-9">
+							<img src="images/lexmarkbaselinesuccessgraph.png" class="img-responsive" style="max-width:100%">
+				</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Card Sort</h4>
+					<h3>New information architecture</h3>
+					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12">
+							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
+				</div>
+				</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<section>
-		<div class="content-wrapper900">
+		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%">
+					<h4>Ideation</h4>
+					<h3>Considerations</h3>
+	</div></div>
+			<div class= "row">
+				<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+					<img src="images/numberone.png" class="img-responsive" style="max-width:90%"></div>
 
-				</div>
-			</div>
+				<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
+				<p>Forms do not always have to display all the information at first load. Make information appear based on what they select in the forms. Keep forms dynamic.</p><br><br>
+			</div></div>
+			<div class= "row">
+				<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+					<img src="images/numbertwo.png" class="img-responsive" style="max-width:90%"></div>
+
+				<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
+				<p>Prevent user error by keeping the information digestible at a glance and limiting user actions (e.g. using radio buttons rather than checkboxes will only allow users to select one option).</p><br><br>
+			</div></div>
+			<div class= "row">
+				<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+					<img src="images/numberthree.png" class="img-responsive" style="max-width:90%"></div>
+
+				<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
+				<p>Build users' confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
+			</div></div>
 		</div>
+</div>
+
 	</section>
 
-
-
-
-
-
-	<section id="graybg">
-		<div class="container contentblock">
-			<div class="content">
+	<section>
+		<div class="contentblock content-wrapper900">
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>BASELINE USABILITY TEST</h3>
-					</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Prototype</h4>
+					<h3>Fully functioning prototype on Axure</h3>
+	</div></div>
+
+					<div class="col-lg-12 col-md-12 col-sm-12">
+					<iframe class="center" title="vimeo-player" src="https://player.vimeo.com/video/384256205?muted=1&title=0&byline=0&portrait=0" width="640" height="430" frameborder="0" allowfullscreen></iframe><br><br><br>
 				</div>
-				<br><br>
-				<div class="row">
-					<div class="col-lg-3 col-md-3 col-sm-3">
-						<img src="images/lexmarkbaselinesuccessnumber.png" class="img-responsive" style="max-width:100%">
-	    </div>
-					<div class="col-lg-9 col-md-9 col-sm-9">
-						<img src="images/lexmarkbaselinesuccessgraph.png" class="img-responsive" style="max-width:100%">
-	    </div>
-		</div>
+			</div>
+
+</section>
+
+<section>
+	<div class="contentblock content-wrapper900">
 		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12">
-				<p><br><br>Employees were failing almost once out of every two attempts to find the right form. The usability tests helped me pinpoint the exact steps in the user flow where users were making errors.
-			</div>
-		</div>
-	  </div>
-	</div>
-	</section>
-
-
-	<section id="section">
-			<div class="container">
-						<div class="content contentblock">
-							<div class="row">
-								<div class="col-md-12 col-sm-12 text-center">
-									</div>
-								</div>
-			<!-- <div class="row">
-				<div class="col-lg col-md-12 col-sm-12">
-					<p>I sent out an online card sort task with the titles of 10 forms to Lexmark employees and personally conducted 10 card sorts with employees. The tests demonstrated that the current organization of content was no where near the results of the card sorts. I also had enough data from the previous baseline usability test to support design decisions. </p>
-				</div></div> -->
-				<div class="row">
-					<div class="col-lg col-md-12 col-sm-12">
-						<h3>NEW INFORMATION ARCHITECTURE</h3>
-					</div></div><br><br>
-						<div class="row">
-
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-			<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%">
-		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-				<p><br><br>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p>
-	</div>
-</section>
-
-<section id="graybg">
-		<div class="container">
-					<div class="content contentblock">
-			<div class="row">
-				<div class="col-lg col-md-12 col-sm-12">
-						<h3>DESIGN CONCEPT</h3>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<p class="mont">What I kept in mind while designing</p><br><br><br>
-</div>
-</div>
-				<div class= "row">
-					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/numberone.png" class="img-responsive" style="max-width:90%"></div>
-
-					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-					<p>Forms do not always have to display all the information at first load. Make information appear based on what they select in the forms. Keep forms dynamic.</p><br><br>
-				</div></div>
-				<div class= "row">
-					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/numbertwo.png" class="img-responsive" style="max-width:90%"></div>
-
-					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-					<p>Prevent user error by keeping the information digestible at a glance and limiting user actions (e.g. using radio buttons rather than checkboxes will only allow users to select one option).</p><br><br>
-				</div></div>
-				<div class= "row">
-					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/numberthree.png" class="img-responsive" style="max-width:90%"></div>
-
-					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-					<p>Build users' confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
-				</div></div>
-		</div>
-		</div>
-	</section>
-
-
-	<section id="section">
-			<div class="container">
-						<div class="content">
-							<div class="row">
-								<div class="col-md-12 col-sm-12 text-center">
-									</div>
-								</div><br><br><br><br><br>
-			<div class="row">
-				<div class="col-lg col-md-12 col-sm-12">
-					<h3>HIGH FIDELITY PROTOTYPE</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<p class="mont">Fully functioning prototype on Axure</p>
-</div>
-</div><br><br><br>
-					<div class="col-lg-12 col-md-12 col-sm-12">
-					<iframe class="center" title="vimeo-player" src="https://player.vimeo.com/video/384256205?muted=1&title=0&byline=0&portrait=0" width="640" height="430" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-													 <section id="graybg">
-													 	<div class="container contentblock">
-															<div class="content">
-													 		<div class="row">
-													 			<div class="col-md-12 col-sm-12 text-center">
-													 				<h2>Phase 4 of 4: Validation</h2>
-																	</div>
-																</div>
-															<br><br><br><br><br>
-															 <div class="row">
-																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                   <h3>FINAL USABILITY TEST</h3>
-								                 </div>
-															 </div>
-
-															 <div class="row">
-																		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-																			<p class="mont">My design demonstrated a 36% improvement</p>
-																		</div>
-
-																	</div><br><br>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h4>Final Usability Test</h4>
+				<h3>My design demonstrated a 36% improvement</h3>
+</div></div>
+								
 															 		 <div class="row">
 																 <!-- <div class="col-lg-6 col-md-6 col-sm-12">
 								                   <P>Usability testing of the new design showed a 36% improvement. Like the previous test, we recruited ten employees and each test included ten of the same tasks. After the final round of testing, I made minor changes to strings to clear up some confusion in hopes to raise the 89% success rate before writing the documentation for developers.</p></div> -->
