--- a/lexmark.html
+++ b/lexmark.html
@@ -81,27 +81,10 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<img src="images/lexmarkintro.png" class="img-responsive">
 	</section>
 
-	<section>
-	<div class="contentblock content-wrapper900" style="padding-top: 3em;">
-		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
-				<p class="overview-info">Duration</p>
-				<p style="line-height:1.5em;"> 3 months</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
-				<p class="overview-info">Tools</p>
-				<p style="line-height:1.5em;">Axure, Adobe XD</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
-				<p class="overview-info">Team</p>
-				<p style="line-height:1.5em;">UX Team Manager<br>UX Researcher <br>UX Designer ( me 👋🏼)</p>
-			</div>
-		</div>
-		</div>
-	</section>
+
 
 	<section>
-    <div class="contentblock">
+    <div class="contentblock" style="padding-top:10em;">
 			<div class="row">
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -131,14 +114,26 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>My role</h4>
 					<!-- <h3>Helping ServiceNow Service Now</h3> -->
-					<p>I had the opportunity to conduct user research, iterate on my designs, and create a prototype on Axure. After my internship, I independently explored the platform's visual design and microinteractions. </p>
-					<img src="images/lexmarkprocess.png" class="img-responsive">
+</div></div>
+<div class="row">
+					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Problem Validation</span><br>Conducted user interviews and a baseline usability test to identify exact pain points of the ServiceNow platform.</p>
+										<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Collaborative Iterative Design</span><br>Communicated with stakeholders, developer, and presented during design reviews and iterated on feedback. </p>
+											<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Measuing Success & Implementation </span><br> Conducted a final usability test that demonstrated a 36% improvement and prepared the documentation for developer hand-off.</p>
+												<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Solo project</span><br>After the end of the internship, I took the time to further explore the visual design and microinteractions.</p>
+										</div>
+										<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+											<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Team</span><br>UX Team Manager<br>UX Researcher <br>UX Designer ( me 👋🏼)</p>
+												<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Duration</span><br> 3 months</p>
+													<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Tools</span><br> Axure<br>
+													Sketch</p>
+												</div>
+					<!-- <img src="images/lexmarkprocess.png" class="img-responsive"> -->
 
 				</div>
 			</div>
 		</div>
 	</section>
-
 
 
 
@@ -240,7 +235,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 			</div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%">
+							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:5em;">
 
 						</div>
 					</div>
@@ -270,10 +265,10 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
-												<p> <span style= "font-weight:700;"><br><br>1. Unclear Writing</span><br>The form titles were confusing. Employees weren't sure that they were submitting the correct request form.<br>
+												<p> <span style= "font-weight:700;"><br><br>1. Lack of help for employees</span><br>Users were left to fend for themselves and provided no help when they were unsure of what the form entailed.<br>
 											</p>
-													<p><span style= "font-weight:700;">2. Poor Information Architecture</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p>
-														<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
+													<p><span style= "font-weight:700;">2. Error prone</span><br> Some options had either/or relationships and checkboxes allowed users to make errors</p>
+														<p><span style= "font-weight:700;">3. Indigestible information</span><br> The content of the form was not digestable at a glance because of poor content hierarchy.</p>
 
 			</div>
 	</div>
@@ -376,7 +371,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<h4>Final Usability Test</h4>
 				<h3>My design demonstrated a 36% improvement</h3>
 </div></div>
-								
+
 															 		 <div class="row">
 																 <!-- <div class="col-lg-6 col-md-6 col-sm-12">
 								                   <P>Usability testing of the new design showed a 36% improvement. Like the previous test, we recruited ten employees and each test included ten of the same tasks. After the final round of testing, I made minor changes to strings to clear up some confusion in hopes to raise the 89% success rate before writing the documentation for developers.</p></div> -->
