--- a/lexmark.html
+++ b/lexmark.html
@@ -357,11 +357,12 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 					<h3>Fully functioning prototype on Axure</h3>
 	</div></div>
 
-					<div class="col-lg-12 col-md-12 col-sm-12">
-					<iframe class="center" title="vimeo-player" src="https://player.vimeo.com/video/384256205?muted=1&title=0&byline=0&portrait=0" width="640" height="430" frameborder="0" allowfullscreen></iframe><br><br><br>
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-top:15px;">
+
+					<iframe title="vimeo-player" src="https://player.vimeo.com/video/384256205?muted=1&title=0&byline=0&portrait=0" width="640" height="430" frameborder="0" allowfullscreen></iframe><br><br><br>
 				</div>
 			</div>
-
 </section>
 
 <section>
