--- a/lexmark.html
+++ b/lexmark.html
@@ -28,11 +28,11 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/project.css">
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;600&display=swap" rel="stylesheet">
 
 
-	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@600;800&family=Montserrat:wght@300;400;500;600;600&family=Work+Sans:wght@200;300;400;500;600;600;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;600&display=swap" rel="stylesheet">
 
 
 
@@ -85,47 +85,56 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 	<section>
     <div class="contentblock" style="padding-top:10em;">
+
+			<div class="row">
+
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<h4 class="textcenter">Overview</h4>
+</div></div>
 			<div class="row">
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding: 25px 0px;">
 						<img src="images/lexmarkhomedescription.png" class="img-responsive" style="max-width:470px; float: right; padding: 0px 5px;">
         </div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-					<h4>Overview</h4>
-					<p>As a UX design intern, I redesigned ServiceNow, a customizable SaaS for technical management support for Lexmark employees.
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
+					<p>ServiceNow is a customizable SaaS for technical management support for Lexmark employees.
 					</p>
 
-					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
-					</p> -->
-
 					<p>There was a consensus among employees that ServiceNow created more problems than it solved.</p>
-					<p>As a UX design intern, I led a user-centered approach to redesign ServiceNow's information architecture, its interface, and its UX. Usability tests, card sorts, and interviews supported my design decisions.
+					<p>As a UX design intern, I led a user-centered approach to redesign ServiceNow. Usability tests, card sorts, and interviews supported my design decisions.
 </p>
 					<p style="font-weight:600;">The outcome of my redesign was an enhanced usability score of a 36% improvement and higher employee satisfaction ratings.</p>
 				</div>
-    </div></div>
+    </div>
+
+	</div>
   </section>
 
 
 	<section>
 		<div class="contentblock content-wrapper900">
+
 			<div class="row">
+
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>My role</h4>
-					<!-- <h3>Helping ServiceNow Service Now</h3> -->
+<h4 class="textcenter" style="padding-bottom:25px;">My Role</h4>
 </div></div>
+
 <div class="row">
 					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Problem Validation</span><br>Conducted user interviews and a baseline usability test to identify exact pain points of the ServiceNow platform.</p>
-										<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Collaborative Iterative Design</span><br>Communicated with stakeholders, developer, and presented during design reviews and iterated on feedback. </p>
-											<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Measuing Success & Implementation </span><br> Conducted a final usability test that demonstrated a 36% improvement and prepared the documentation for developer hand-off.</p>
-												<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Solo project</span><br>After the end of the internship, I took the time to further explore the visual design and microinteractions.</p>
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">Problem Validation</span><br>Conducted interviews to frame the problem and conducted a baseline usability test to identify pain points of the ServiceNow platform.</p>
+										<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Iterative Design</span><br>Refined designs based on conversations with the stakeholder, the developer, and other designers during design reviews.
+</p>
+											<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Validation & Implementation </span><br> Conducted a final usability test that demonstrated a 36% improvement and prepared the documentation for developer hand-off.</p>
+												<p style="padding-bottom: 5px;"><span style= "font-weight:600;">After the Internship</span><br>I wasn't satisfied with the end product so I took the time to further explore ServiceNow's svisual design and microinteractions.</p>
 										</div>
-										<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-											<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Team</span><br>UX Team Manager<br>UX Researcher <br>UX Designer ( me 👋🏼)</p>
-												<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Duration</span><br> 3 months</p>
-													<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Tools</span><br> Axure<br>
+										<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12">
+</div>
+										<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+											<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">Team</span><br>UX Design Manager<br>UX Researcher <br>UX Designer ( me 👋🏼)</p>
+												<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Duration</span><br> 3 months</p>
+													<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Tools</span><br> Axure<br>
 													Sketch</p>
 												</div>
 					<!-- <img src="images/lexmarkprocess.png" class="img-responsive"> -->
@@ -139,7 +148,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 
   <section>
-		<div class="contentblock content-wrapper900">
+		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>THE PROBLEM</h4>
@@ -153,7 +162,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 					<img src="images/lexmarkemoji.png" class="img-responsive center" style="max-width:85%; float:center; padding-top:2em;">
-				<br><br>	<p style="text-align:center;">ServiceNow Team</p>
+				<br>	<p style="text-align:center; padding-bottom:3em; font-weight:bold;">ServiceNow Team</p>
 
 				</div>
 			</div>
@@ -193,7 +202,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Solution at glance</h4>
-					<h3>Success rate went from 53% to 89%</h3>
+					<h3>Usability score of the platform increased from 53% to 89%</h3>
 				</div>
 			</div>
 		</div>
@@ -209,10 +218,12 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
 				</div> -->
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-	<p><span style= "font-weight:700;"><br><br>1. New Information Architecture</span><br>A user begins with location and then only sees forms relevant to their location.</p>
-													<p> <span style= "font-weight:700;">2. Cards > Dropdown</span><br>Cards allowed room for description texts for potentially confusing form titles.</p>
+					<br>
 
-															<p><span style= "font-weight:700;">3. 10 redesigned request forms</span><br> Forms were made to be dynamic to help users see only the relevant information pertaining to their request</p>
+	<p><span style= "font-weight:600;">Change 1</span><br>Five step process is cut down to three</p>
+													<p> <span style= "font-weight:600;">Change 2</span><br>Replaced dropdown with cards</p>
+
+															<p><span style= "font-weight:600;">Change 3, 4, 5 ... 99 😅</span><br>Not pictured here, but 10 service request forms were redesigned</p>
 
 
 					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
@@ -246,15 +257,23 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 	<section>
 		<div class="contentblock">
 			<div class="row">
+
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<h4 class="textcenter">Example Pain Points</h4>
+</div></div>
+
+			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
+	<p><span style= "font-weight:600;">1 - Unnecessary back & forth clicks</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p><br>
 
-													<p> <span style= "font-weight:700;"><br><br>1. Unclear Writing</span><br>The form titles were confusing. Employees weren't sure that they were submitting the correct request form.<br>
+
+													<p> <span style= "font-weight:600;">2 - Too much guesswork</span><br>The form titles in the dropdown were unclear and employees weren't sure of what they were clicking on. <br>
 												</p>
-														<p><span style= "font-weight:700;">2. Poor Information Architecture</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p>
-															<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
+
+
 
 				</div>
 		</div>
@@ -265,11 +284,11 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
-												<p> <span style= "font-weight:700;"><br><br>1. Lack of help for employees</span><br>Users were left to fend for themselves and provided no help when they were unsure of what the form entailed.<br>
+												<p> <span style= "font-weight:600;"><br><br> 3 - Poor Content Hierarchy</span><br> The content of the form was not digestable at a glance.
+													<br>
 											</p>
-													<p><span style= "font-weight:700;">2. Error prone</span><br> Some options had either/or relationships and checkboxes allowed users to make errors</p>
-														<p><span style= "font-weight:700;">3. Indigestible information</span><br> The content of the form was not digestable at a glance because of poor content hierarchy.</p>
-
+														<p><span style= "font-weight:600;">4 - Lack of Help</span><br>Users were left to fend for themselves when they were unsure of what the options were.</p>
+	<p><span style= "font-weight:600;">5 - Error prone</span><br> Options with either/or relationships involved checkboxes rather than radio buttons</p>
 			</div>
 	</div>
 </div>
@@ -292,24 +311,6 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				</div>
 						<div class="col-lg-9 col-md-9 col-sm-9">
 							<img src="images/lexmarkbaselinesuccessgraph.png" class="img-responsive" style="max-width:100%">
-				</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-	<section>
-		<div class="contentblock content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Card Sort</h4>
-					<h3>New information architecture</h3>
-					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
-					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12">
-							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
-				</div>
 				</div>
 				</div>
 			</div>
@@ -345,9 +346,62 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<p>Build users' confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
 			</div></div>
 		</div>
-</div>
+	</div>
 
 	</section>
+
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Card Sort</h4>
+					<h3>New information architecture</h3>
+					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12">
+							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
+				</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
+
+	<section>
+		<div class="content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Interface Design</h4>
+					<h3>Content heavy screens does not have to have a bad UX</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="contentblock" style="max-width:1500px;">
+			<div class="row">
+				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+					<img src="images/newcomparison2.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				</div>
+				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				</div> -->
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+<br>
+													<p> <span style= "font-weight:600;">2. Cards > Dropdown</span><br>Cards allowed room for description texts for potentially confusing form titles.</p>
+
+
+					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
+					</p> -->
+
+				</div>
+		</div></div>
+	</section>
+
 
 	<section>
 		<div class="contentblock content-wrapper900">
@@ -395,11 +449,11 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 												 							<div class="row">
 												 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-												 											<p><span style= "font-weight:700;">1. Communicate often and early with developers.</span><br>Actually, the quality of communication matters too. Be specific with details of the design and be pointed with questions about limitations.</br></br>
+												 											<p><span style= "font-weight:600;">1. Communicate often and early with developers.</span><br>Actually, the quality of communication matters too. Be specific with details of the design and be pointed with questions about limitations.</br></br>
 
-												 											<span style= "font-weight:700;">2. Buisness are important too </span><br> As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. <br></br>
+												 											<span style= "font-weight:600;">2. Buisness are important too </span><br> As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. <br></br>
 
-												 	<span style= "font-weight:700;">3. Use current components if there is any but be persuasive about updating it</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
+												 	<span style= "font-weight:600;">3. Use current components if there is any but be persuasive about updating it</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
 												 								<br><br>
 
 
