--- a/lexmark.html
+++ b/lexmark.html
@@ -212,7 +212,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="contentblock" style="max-width:1500px;">
 			<div class="row">
 				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-					<img src="images/newcomparison2.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+					<img src="images/newcomparison3.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
 				</div>
 				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
@@ -354,7 +354,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Card Sort</h4>
+					<h4>Solution - Card Sort</h4>
 					<h3>New information architecture</h3>
 					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
 					<div class="row">
@@ -371,18 +371,13 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 
 	<section>
-		<div class="content-wrapper900">
+		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Interface Design</h4>
+					<h4>Solution - Interface Design</h4>
 					<h3>Content heavy screens does not have to have a bad UX</h3>
 				</div>
 			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="contentblock" style="max-width:1500px;">
 			<div class="row">
 				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
 					<img src="images/newcomparison2.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
@@ -390,10 +385,34 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
 				</div> -->
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
 <br>
-													<p> <span style= "font-weight:600;">2. Cards > Dropdown</span><br>Cards allowed room for description texts for potentially confusing form titles.</p>
+													<p> <span style= "font-weight:600;">Change 1<br>
+														Cards > Dropdown</span><br>Cards allow room for description texts for potentially confusing form titles such as "Badge Reader - Security Lexington".</p>
 
+
+					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
+					</p> -->
+
+				</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+
+			<img src="images/newcomparison4.png" class="img-responsive" style="; float:right; padding: 25px 0px;">
+
+		</div>
+
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:500px; padding-bottom: 5em;">
+					<br>
+
+	<p><span style= "font-weight:600;">Change 2</span><br>Improved hierarchy with categorization of content <br></p>
+
+
+													<p><span style= "font-weight:600;">Change 3</span><br>Error prevention: radio buttons for either/or relationships</p>
+
+	<p><span style= "font-weight:600;">Change 4</span><br>Helper text for confused users</p>
 
 					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
 					</p> -->
@@ -401,6 +420,52 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				</div>
 		</div></div>
 	</section>
+
+
+
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Solution - Interaction Design</h4>
+					<h3>Aha moment! Forms can be dynamic</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+					<img src="images/lexmarkinteraction1.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				</div>
+				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				</div> -->
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
+	<br>
+													<p> <span style= "font-weight:600;">What's changed?
+													</span><br>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
+		</div>
+
+				</div>
+
+				<div class="row">
+					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+						<img src="images/lexmark2.gif" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
+					</div>
+					<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+						<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+					</div> -->
+					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+		<br>
+														<p> <span style= "font-weight:600;">What's changed?
+														</span><br>Previously, all the information was visible on load, but for the redesign, options will show depending on what the users click</p>
+			</div>
+
+					</div>
+
+
+		</div></div>
+	</section>
+
+
 
 
 	<section>
