--- a/lexmark.html
+++ b/lexmark.html
@@ -127,7 +127,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 										<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Iterative Design</span><br>Refined designs based on conversations with the stakeholder, the developer, and other designers during design reviews.
 </p>
 											<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Validation & Implementation </span><br> Conducted a final usability test that demonstrated a 36% improvement and prepared the documentation for developer hand-off.</p>
-												<p style="padding-bottom: 5px;"><span style= "font-weight:600;">After the Internship</span><br>I wasn't satisfied with the end product so I took the time to further explore ServiceNow's svisual design and microinteractions.</p>
+												<p style="padding-bottom: 5px;"><span style= "font-weight:600;">After the Internship</span><br>I wasn't satisfied with the end product so I took the time to further explore ServiceNow's visual design and microinteractions.</p>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12">
 </div>
