--- a/lexmark.html
+++ b/lexmark.html
@@ -81,29 +81,57 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<img src="images/lexmarkintro.png" class="img-responsive">
 	</section>
 
+	<section>
+		<div class="contentblock content-wrapper900">
+
+
+<div class="row" style="padding-top:75px;">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">My Role</span><br>I conducted user research, led the design direction, and measured the success of the redesign
+</p>
+										</div>
+										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+											<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">Team</span><br>UX design manager, researcher, designer (me 👋🏼)
+
+											</p>
+												</div>
+
+				</div>
+
+				<div class="row">
+									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+													<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Internship Duration</span><br> 3 months</p>
+														</div>
+														<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+															<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Tools</span><br> Axure, Sketch, Principle</p>
+																</div>
+								</div>
+			</div>
+		</div>
+	</section>
+
 
 
 	<section>
-    <div class="contentblock" style="padding-top:10em;">
+    <div class="contentblock">
 
-			<div class="row">
 
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-<h4 class="textcenter">Overview</h4>
-</div></div>
 			<div class="row">
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding: 25px 0px;">
+
+						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding-top:25px; padding-bottom: 15px;">
 						<img src="images/lexmarkhomedescription.png" class="img-responsive" style="max-width:470px; float: right; padding: 0px 5px;">
         </div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
-					<p>ServiceNow is a customizable SaaS for technical management support for Lexmark employees.
+					<p><span style= "font-weight:700;">Overview</span><br></p>
+					<p>As a Lexmark UX design intern, I led a user-centered approach to redesign ServiceNow.
+</p>
+					<p>ServiceNow is a customizable SaaS for technical management support for Lexmark employees. Lexmark employees can submit request forms for a wide variety of jobs or services on the ServiceNow platform.
 					</p>
 
 					<p>There was a consensus among employees that ServiceNow created more problems than it solved.</p>
-					<p>As a UX design intern, I led a user-centered approach to redesign ServiceNow. Usability tests, card sorts, and interviews supported my design decisions.
-</p>
+
 					<p style="font-weight:600;">The outcome of my redesign was an enhanced usability score of a 36% improvement and higher employee satisfaction ratings.</p>
 				</div>
     </div>
@@ -112,37 +140,6 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
   </section>
 
 
-	<section>
-		<div class="contentblock content-wrapper900">
-
-			<div class="row">
-
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-<h4 class="textcenter" style="padding-bottom:25px;">My Role</h4>
-</div></div>
-
-<div class="row">
-					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">Problem Validation</span><br>Conducted interviews to frame the problem and conducted a baseline usability test to identify pain points of the ServiceNow platform.</p>
-										<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Iterative Design</span><br>Refined designs based on conversations with the stakeholder, the developer, and other designers during design reviews.
-</p>
-											<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Validation & Implementation </span><br> Conducted a final usability test that demonstrated a 36% improvement and prepared the documentation for developer hand-off.</p>
-												<p style="padding-bottom: 5px;"><span style= "font-weight:600;">After the Internship</span><br>I wasn't satisfied with the end product so I took the time to further explore ServiceNow's visual design and microinteractions.</p>
-										</div>
-										<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12">
-</div>
-										<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-											<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">Team</span><br>UX Design Manager<br>UX Researcher <br>UX Designer ( me 👋🏼)</p>
-												<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Duration</span><br> 3 months</p>
-													<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Tools</span><br> Axure<br>
-													Sketch</p>
-												</div>
-					<!-- <img src="images/lexmarkprocess.png" class="img-responsive"> -->
-
-				</div>
-			</div>
-		</div>
-	</section>
 
 
 
@@ -197,7 +194,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 
 
-	<section>
+	<!-- <section>
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -214,9 +211,6 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
 					<img src="images/newcomparison3.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
 				</div>
-				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
-				</div> -->
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 					<br>
 
@@ -224,15 +218,10 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 													<p> <span style= "font-weight:600;">Change 2</span><br>Replaced dropdown with cards</p>
 
 															<p><span style= "font-weight:600;">Change 3, 4, 5 ... 99 😅</span><br>Not pictured here, but 10 service request forms were redesigned</p>
-
-
-					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
-					</p> -->
-
 				</div>
 		</div></div>
 	</section>
-
+ -->
 
 
 
